# crewai

./: README.md  pyproject.toml  report.md  requirements.txt
src/first_crew_project/: crew.py  main.py
src/first_crew_project/config/: agents.yaml  tasks.yaml
